# AI-Resume-Analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_gemini.py
assets/: style.css
utils/: format_resume.py  gemini_client.py  pdf_reader.py
utils/components/: cover_letter.py  gauge.py  interview_coach.py  radar_chart.py  recruiter_dashboard.py  resume_comparison.py  resume_rewriter.py  skill_match.py
utils/pdf/: cover_letter_pdf.py  resume_pdf.py
