[project]
name = "ai-resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "streamlit>=1.58.0",
    "streamlit-echarts>=0.7.0",
    "streamlit-extras>=1.6.0",
    "streamlit-option-menu>=0.4.0",
]
